NAV/1024p/Increased z-index value to .fix-menu

--- a/css/main.css
+++ b/css/main.css
@@ -204,7 +204,7 @@ main {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 3;
+  z-index: 4;
 }
 @media (min-width: 768px) {
   .fix-menu::before {
